force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <label>Site</label>
    <nameField>
        <label>Lease Name/Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>