force-app/main/default/objects/Site__c/fields/Client_Contact_OCR__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_OCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact (OCR)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>