force-app/main/default/objects/Site__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Site</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>