force-app/main/default/objects/Site__c/fields/DSJS_Count_All__c.field-meta.xml
<CustomField>
    <fullName>DSJS_Count_All__c</fullName>
    <label>DSJS - Count All</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>