force-app/main/default/objects/Site__c/fields/DSJS_Count_Approved__c.field-meta.xml
<CustomField>
    <fullName>DSJS_Count_Approved__c</fullName>
    <label>DSJS - Count Approved</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>