force-app/main/default/objects/Site__c/fields/Invoice_amount_Ex_GST__c.field-meta.xml
<CustomField>
    <fullName>Invoice_amount_Ex_GST__c</fullName>
    <description>Total value of the invoice Ex GST</description>
    <label>Invoice amount Ex GST</label>
    <length>25</length>
    <type>Text</type>
</CustomField>