force-app/main/default/objects/Site__c/fields/Previous_Site_Look_up__c.field-meta.xml
<CustomField>
    <fullName>Previous_Site_Look_up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Contract__c</field>
            <operation>equals</operation>
            <valueField>Site__c.Contract__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Site__c.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Site</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>