force-app/main/default/objects/Site__c/fields/Ready_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All DSJS&apos;s = Status Approved</inlineHelpText>
    <label>Ready to Invoice</label>
    <type>Checkbox</type>
</CustomField>