force-app/main/default/objects/Site__c/fields/Site_Active__c.field-meta.xml
<CustomField>
    <fullName>Site_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Active</label>
    <type>Checkbox</type>
</CustomField>