force-app/main/default/objects/Site__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <inlineHelpText>Open: Active;
Open - Inactive: Inactive,Winding up;
Closed: Inactive, Work Complete;</inlineHelpText>
    <label>Site Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Open - Inactive</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Ready to Invoice</fullName>
            </value>
            <value>
                <fullName>Inv - Draft</fullName>
            </value>
            <value>
                <fullName>Inv - Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Inv - Approved</fullName>
            </value>
            <value>
                <fullName>Inv - Disputed</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
                <label>Inv - Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>