force-app/main/default/objects/Site__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Site</fullName>
                <default>true</default>
                <label>Active Site</label>
            </value>
            <value>
                <fullName>Inactive Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>