force-app/main/default/objects/Site__c/fields/Transport_Only_Site__c.field-meta.xml
<CustomField>
    <fullName>Transport_Only_Site__c</fullName>
    <formula>IF( (ISBLANK( WD_Camp__c ) &amp;&amp;  ISBLANK( WD_Rig__c )) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Only Site</label>
    <type>Checkbox</type>
</CustomField>