force-app/main/default/objects/Site__c/fields/WD_Camp__c.field-meta.xml
<CustomField>
    <fullName>WD_Camp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Camp</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Site (WD Camp)</relationshipLabel>
    <relationshipName>Site1</relationshipName>
    <type>Lookup</type>
</CustomField>