force-app/main/default/objects/Site__c/fields/WD_Inv__c.field-meta.xml
<CustomField>
    <fullName>WD_Inv__c</fullName>
    <label>WD Inv #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>