force-app/main/default/objects/Site__c/fields/WD_Rig__c.field-meta.xml
<CustomField>
    <fullName>WD_Rig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Rig</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Site</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>