force-app/main/default/objects/Site__c/fields/Work_Scope__c.field-meta.xml
<CustomField>
    <fullName>Work_Scope__c</fullName>
    <inlineHelpText>Select Type and add more to Job Description (EG: Washdown)</inlineHelpText>
    <label>Work Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Over</fullName>
            </value>
            <value>
                <fullName>Initial Completion</fullName>
            </value>
            <value>
                <fullName>Flush</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Plug and Abandon</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Surface Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>