force-app/main/default/objects/Site__c/recordTypes/Well_Site.recordType-meta.xml
<RecordType>
    <fullName>Well_Site</fullName>
    <active>true</active>
    <label>Well Site</label>
</RecordType>