force-app/main/default/objects/Site__c/validationRules/Active_Site_Cannot_Be_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Site_Cannot_Be_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBLANK( Contract__c )) &amp;&amp; TEXT(Site_Status__c)=&apos;Closed&apos; &amp;&amp; Site_Active__c , true, false)</errorConditionFormula>
    <errorMessage>Cannot Close a Site if it is Active</errorMessage>
</ValidationRule>