force-app/main/default/objects/Site__c/validationRules/Cannot_Add_Edit_Sites.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Add_Edit_Sites</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;SA2&apos;, 
$Profile.Name &lt;&gt; &apos;Supervisory&apos;, 
$Profile.Name &lt;&gt; &apos;Ops Manager -Rig&apos;, 
$Profile.Name &lt;&gt; &apos;Ops Manager - Transport&apos;,
$Profile.Name &lt;&gt; &apos;Field Manager - Camp&apos;,
$Profile.Name &lt;&gt; &apos;Field Manager - Rig&apos;,
$Profile.Name &lt;&gt; &apos;Ops Manager -Rig (New)&apos;
)</errorConditionFormula>
    <errorMessage>You are not authorized to add/edit a Site. Kindly, contact your Operations Manager for same.</errorMessage>
</ValidationRule>