force-app/main/default/objects/Site__c/validationRules/Cant_Add_Site_for_Inactive_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Add_Site_for_Inactive_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
NOT(ISBLANK( Contract__c )) &amp;&amp; 
ISNEW() &amp;&amp; NOT( Contract__r.Contract_Active__c ), 
TRUE, 
FALSE 
)</errorConditionFormula>
    <errorMessage>Cannot create new Site for an Inactive Contract</errorMessage>
</ValidationRule>