force-app/main/default/objects/Site__c/listViews/All_Sites_To_Update_Work_Type.listView-meta.xml
<ListView>
    <fullName>All_Sites_To_Update_Work_Type</fullName>
    <columns>WD_Camp__c</columns>
    <columns>WD_Rig__c</columns>
    <columns>NAME</columns>
    <columns>Job_Description__c</columns>
    <columns>Work_Scope__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2024</value>
    </filters>
    <filters>
        <field>Work_Scope__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Site__c.Well_Site</value>
    </filters>
    <label>All Sites - To Update Work Type</label>
</ListView>