force-app/main/default/objects/Site__c/listViews/Auscoil_Santos_GLNG_595.listView-meta.xml
<ListView>
    <fullName>Auscoil_Santos_GLNG_595</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Site_Status__c</columns>
    <columns>Site_Active__c</columns>
    <columns>Contract__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>595</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>11/1/2019</value>
    </filters>
    <label>Santos GLNG: Auscoil (595)</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>