force-app/main/default/objects/Site__c/listViews/Camp_07_Beach_552.listView-meta.xml
<ListView>
    <fullName>Camp_07_Beach_552</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Previous_Site_Look_up__c</columns>
    <columns>Site_Active__c</columns>
    <columns>Site_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>485</value>
    </filters>
    <label>Camp 7 - Beach (485)</label>
    <sharedTo>
        <group>Camp_7</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>