force-app/main/default/objects/Site__c/listViews/Camp_10_Santos_SA_611.listView-meta.xml
<ListView>
    <fullName>Camp_10_Santos_SA_611</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Previous_Site__c</columns>
    <columns>Site_Active__c</columns>
    <columns>Site_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>611</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>11/1/2019</value>
    </filters>
    <label>Camp 10 - Santos SA (611)</label>
    <sharedTo>
        <group>Camp_10</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>