force-app/main/default/objects/Site__c/listViews/Camp_9_Santos_SA_383.listView-meta.xml
<ListView>
    <fullName>Camp_9_Santos_SA_383</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Previous_Site__c</columns>
    <columns>Site_Active__c</columns>
    <columns>Site_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>552</value>
    </filters>
    <label>Camp 9 - Santos SA (552)</label>
    <sharedTo>
        <group>Camp_9</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>