force-app/main/default/objects/Site__c/listViews/Cleanaway_610.listView-meta.xml
<ListView>
    <fullName>Cleanaway_610</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Site_Status__c</columns>
    <columns>Site_Active__c</columns>
    <columns>Contract__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>610</value>
    </filters>
    <label>Cleanaway (610)</label>
    <sharedTo>
        <group>Finance</group>
        <group>Transport</group>
    </sharedTo>
</ListView>